This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
5/7/17: Added script commands for getting and setting condenser-image plane
distance offset on Titan.

5/6/17: When "Align in IMOD" is selected for K2 frames, it will automatically
turn on frame saving but retain the user's setting for this (In 3.6).

5/3/17: Fixed setting of X beam tilt with adjustment in coma-free routine,
broken 2/26/17.

4/25/17: SEM_3-6-8
4/24/17: Realign to Item stays in Low Dose even if spot size or filter
settings change; the map settings are still applied.  Also it stays in Low
Dose if View defocus offset changes by up to 20 microns. (In 3.6).

4/23/17: Fixed storage of last time done when hardware dark reference is
updated (In 3.6).

4/23/17: Fixed AddToAutodoc command to release autodoc mutex (In 3.6).

4/20/17: SEM_3-6-7
4/20/17: Fixed option for saving raw K2 frames with "Gain normalized" selected
in camera setup, which failed when there was settling (In 3.6).

4/20/17: Fixed test that would make Realign to Item go out of Low Dose when
there is an energy filter (In 3.6).

4/17/17: Added script command to skip points in the current group.

4/15/17: Added script command for writing a single-image file of specified
type and compression.

4/15/17: Added option for saving TIFF files with JPEG compression.

4/13/17: SEM-3-6-6
4/13/17: Fix TIFF writing, broken 4/5/17 (In 3.6).

4/13/17: Fixed writing of long summed frame lists (In 3.6).

4/13/17: Added automatic indentation of scripts with Tab/` and stabilized line
in editor window when Tab is used.

4/13/17: Changed dose rate output in microscope status panel to be per sqaure
Angstrom and appear unconditionally, and changed dose rate output in camera
setup dialog to be rate at camera, estimated from prior images.

4/11/17: SEM_3-6-5